--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://pokergeek.ai">
   
-  <!-- Favicon - Logo Dial -->
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <!-- Favicon - Chipstack -->
+  <link rel="icon" type="image/svg+xml" href="assets/chipstack/stack.svg">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -215,13 +215,13 @@
     }
     
     .theme-btn {
-      width: 32px;
-      height: 32px;
-      border-radius: 8px;
-      border: 2px solid transparent;
+      width: 20px;
+      height: 20px;
+      border-radius: 5px;
+      border: 1px solid transparent;
       cursor: pointer;
       transition: all 0.2s ease;
-      font-size: 14px;
+      font-size: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -927,6 +927,11 @@
       <h2>See It In Action</h2>
       <div class="carousel-container">
         <div class="carousel-track" id="carousel-track">
+          <div class="carousel-slide"><img src="assets/screenshots/table-1.png" alt="PokerGeek Table 1"></div>
+          <div class="carousel-slide"><img src="assets/screenshots/table-2.png" alt="PokerGeek Table 2"></div>
+          <div class="carousel-slide"><img src="assets/screenshots/table-3.png" alt="PokerGeek Table 3"></div>
+          <div class="carousel-slide"><img src="assets/screenshots/table-4.png" alt="PokerGeek Table 4"></div>
+          <div class="carousel-slide"><img src="assets/screenshots/table-5.png" alt="PokerGeek Table 5"></div>
           <div class="carousel-slide"><img src="assets/screenshots/Screenshot_20251208_130201.png" alt="PokerGeek Screenshot 1"></div>
           <div class="carousel-slide"><img src="assets/screenshots/Screenshot_20251208_130342.png" alt="PokerGeek Screenshot 2"></div>
           <div class="carousel-slide"><img src="assets/screenshots/Screenshot_20251208_130412.png" alt="PokerGeek Screenshot 3"></div>
