Fix title to PokerGeek.AI, use favicon.svg

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PokerGeek.ai – Poker, Perfected</title>
+  <title>PokerGeek.AI</title>
   <meta name="description" content="A poker platform built for players who demand better. Provably fair shuffling, AI-powered analytics, and a complete ecosystem. Join the waitlist.">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="PokerGeek.ai – Poker, Perfected">
+  <meta property="og:title" content="PokerGeek.AI">
   <meta property="og:description" content="Tired of rigged shuffling and trash poker sites? We built something better.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://pokergeek.ai">
   
-  <!-- Favicon - Chipstack -->
-  <link rel="icon" type="image/svg+xml" href="assets/chipstack/stack.svg">
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="apple-touch-icon" href="favicon.svg">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
