Update tagline: Verifiable shuffles. Real analytics. Built by players, for players. Free to play, Launching Jan 1, 2026

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <!-- Open Graph -->
   <meta property="og:title" content="PokerGeek.AI">
-  <meta property="og:description" content="Tired of rigged shuffling and trash poker sites? We built something better.">
+  <meta property="og:description" content="Verifiable shuffles. Real analytics. Built by players, for players. Free to play, Launching Jan 1, 2026.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://pokergeek.ai">
   
@@ -831,8 +831,9 @@
           <h1>PokerGeek<span id="cycling-suit" class="cycling-suit red">♥</span></h1>
           
           <p class="tagline">
-            Tired of rigged shuffling and trash poker sites?<br>
-            We built something <strong>better</strong>.
+            Verifiable shuffles. Real analytics.<br>
+            Built by players, for players.<br>
+            <strong>Free to play. Launching Jan 1, 2026.</strong>
           </p>
           
           <form class="signup-form" id="waitlist-form">
@@ -841,7 +842,7 @@
               <button type="submit">Join Waitlist</button>
             </div>
             <div class="form-message" id="form-message"></div>
-            <p class="waitlist-note">Be first in line. MVP launching end of 2025.</p>
+            <p class="waitlist-note">Be first in line.</p>
           </form>
         </div>
       </div>
