--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta property="og:url" content="https://pokergeek.ai">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
-  <link rel="apple-touch-icon" href="favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="assets/chipstack/stack.svg">
+  <link rel="apple-touch-icon" href="assets/chipstack/stack.svg">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
