Update Open Graph description for launch date

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <!-- Open Graph -->
   <meta property="og:title" content="PokerGeek.AI">
-  <meta property="og:description" content="Verifiable shuffles. Real analytics. Built by players, for players. Free to play, Launching Jan 1, 2026.">
+  <meta property="og:description" content="Verifiable shuffles. Real analytics. Built by players, for players. Free to play, Launching Jan 2026.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://pokergeek.ai">
   
