--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
           <p class="tagline">
             Verifiable shuffles. Real analytics.<br>
             Built by players, for players.<br>
-            <strong>Free to play. Launching Jan 1, 2026.</strong>
+            <strong>Free to play. Launching Jan 2026.</strong>
           </p>
           
           <form class="signup-form" id="waitlist-form">
